# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: add_source.cmake  define_test.cmake  fetch_dependency.cmake
src/: CMakeLists.txt  main.cpp  other.cpp  other.hpp
src/ut/: CMakeLists.txt  test_other.cpp
